# arvalox

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  cron-setup.md  pyproject.toml  pytest.ini  requirements.txt  run.py  test_relationships.py
backend/alembic/: env.py
backend/alembic/versions/: 0f1d78585246_add_subscription_system_models.py  2763d85a744d_initial_migration_with_password_reset.py  5a03e7168715_rename_customer_contact_name_to_name.py  69ad2f5f8400_initial_migration.py  6a1e5f4f35fe_remove_starter_plan_type_from_.py  72ebb93141dc_add_paystack_integration_fields_to_.py  938e7dac2bdd_add_missing_subscription_columns.py  9647f5455cca_update_user_model_password_hash_to_.py  a9cad5248ac1_add_grace_period_and_usage_reset_fields.py  d3a8e684cbb5_add_grace_period_fields_manual.py  e8b6161a35e6_add_currency_fields_to_organization.py
backend/app/: main.py
backend/app/api/v1/: api.py  auth.py  customers.py  invoices.py  payments.py  reports.py  subscriptions.py  webhooks.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/management/: process_downgrades.py  seed_data.py
backend/app/models/: __init__.py  base.py  customer.py  invoice.py  organization.py  password_reset_token.py  payment.py  subscription.py  user.py
backend/app/schemas/: aging_report.py  auth.py  customer.py  dashboard.py  export.py  invoice.py  payment.py  subscription.py
backend/app/services/: aging_report_service.py  dashboard_service.py  email_service.py  export_service.py  payment_allocation_service.py  payment_history_service.py  paystack_service.py  pdf_service.py  subscription_service.py
backend/app/tests/: conftest.py  test_aging_reports.py  test_auth.py  test_customers.py  test_dashboard.py  test_export.py  test_invoices.py  test_main.py  test_password_reset.py  test_payments.py  test_subscription.py  test_subscription_api.py  test_subscription_service.py
backend/http/: auth.http
backend/scripts/: lint.sh
docs/: MVP_MISSING_FEATURES.md  (+2 more)
(+52 files in other folders)
