[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arvalox-backend"
version = "1.0.0"
description = "Arvalox Invoice Management System Backend"
authors = [{ name = "Sixtus Agbo", email = "hi@sixtusagbo.dev" }]
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.41",
  "asyncpg>=0.30.0",
  "alembic>=1.16.4",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-decouple>=3.8",
  "pydantic-settings>=2.10.1",
  "email-validator>=2.2.0",
  "greenlet>=3.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "httpx>=0.28.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.1.0",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11+
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PIE", # flake8-pie
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
